@@ -1,4 +1,11 @@
 
+2018-02-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* common.c, coblocal.h (cob_get_dump_file): export for internal
+	  call, only use trace file if dump file cannot be opened
+	* termio.c (cob_dump_field): removed trailing spaces for group
+	  items, get trace file from (cob_get_dump_file)
+
 2018-02-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* common.c: cater for empty module_sources
